# onec-context-mcp

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  crontab  docker-compose.base.yml  docker-compose.bsl.yml  docker-compose.yml  entrypoint.sh  env.example  pyproject.toml
docs/: 1c-testing-guide.md  CHANGELOG-serve.md  README.md  analysis-mcp-spravka-2025-03.md  architecture-audit.md  architecture.md  audit-defaults-crossplatform.md  compare-unpackers-report.md  dashboard-and-resilience.md  embedding-models-analysis.md  embedding.md  help_formats.md  index-cache-check.md  ingest-troubleshooting.md  mcp-1c-help-tools-report.md  mcp-1c-help-verification-report.md  mcp-performance-and-scroll-analysis.md  mcp-quality-test-report.md  mcp-tools-cheatsheet.md  mcp-tools-reference.md  mcp-tools-test-report.md  memory-and-scaling.md  metadata-export.md  plan-rich-dashboard.md  plan-serve-web.md  plan-viewer-crosslinks-fixes.md  qdrant-migration.md  quality-and-pitfalls-analysis.md  query-joins-standards.md  run.md  search-and-mcp.md  skills-rules-verification.md  standards-memory.md  testing-db-and-performance.md
examples/: 1c_fonovoe_zadanie_struktura.bsl  1c_form_dynamic_requisite.bsl
scripts/: analyze_kd2_export.py  analyze_metadata_export.py  compare_unpackers.py  embedding_benchmark.py  load_test_mcp.py  qdrant_physical_backup.py  run_mcp.sh
templates/: index.html
tests/: _mcp_http.py  conftest.py  test_bsl_utils.py  test_categories.py  test_cli.py  test_config_crawler.py  test_context_builder.py  test_curated_chunking.py  test_curated_jsonl.py  test_dashboard_data.py  test_dashboard_render.py  test_embedding.py  test_env_config.py  test_form_metadata.py  test_hbk_container.py  test_help_structured.py  test_help_structured_scorecard.py  test_html2md.py  test_http.py  test_indexer.py  test_ingest.py  test_kd2_metadata.py  test_language_resolver.py  test_main.py  test_mcp_functional_crypto.py  test_mcp_integration.py  test_mcp_metrics.py  test_mcp_server.py  test_memory.py  test_mesh_scorecard.py  test_metadata_graph_build.py  test_metadata_graph_schema.py  test_metadata_graph_search.py  test_metadata_ids.py  test_parse_fastcode.py  test_parse_helpf.py  test_parse_its_v8std.py  test_qdrant_errors.py  (+14 more)
(+176 files in other folders)
