[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onec-help"
version = "0.2.20"
description = "1C Help: unpack .hbk, convert to Markdown, index in Qdrant, MCP server"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "markdown>=3.5",
    "qdrant-client>=1.7",
    "snowballstemmer>=2.2",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.0,<4",
    "defusedxml>=0.7",
]
embed = [
    "sentence-transformers>=2.2",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
onec_help = "onec_help.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/onec_help --cov-report=term-missing --cov-fail-under=70"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = [
    "src/onec_help/__main__.py",  # entry point, delegates to cli
    "src/onec_help/mcp_server.py",  # MCP tools — integration, tested via MCP clients
    "*/tests/*",
]
source = ["src/onec_help"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "S", "UP"]
ignore = [
    "E501",
    "S104",  # host="0.0.0.0" intentional for Flask/Docker
    "S108",  # /tmp/help_ingest is documented default, overridable via env
    "S110",  # try/except pass - intentional fallbacks
    "S112",  # try/except continue - intentional skip on error
    "S310",  # Embedding API URL is user-configured
    "S603",  # subprocess with fixed args (unzip, onec_help ingest)
    "S607",  # 7z/unzip from PATH - system dependency
    "S608",  # sqlite table name is constant _CACHE_TABLE
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert is standard in pytest
"src/onec_help/form_metadata.py" = ["S314", "S405"]  # defusedxml fallback; XML from MCP/user

[tool.ruff.lint.isort]
known-first-party = ["onec_help"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]
